<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:elevation="4dp"
            app:title="@string/app_name"
            app:titleTextColor="@color/white" />

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etTexto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:ems="10"
                android:hint="@string/escribe"
                android:autofillHints=""
                android:inputType="text"
                android:text="" />

            <Button
                android:id="@+id/btVisualizar"
                android:layout_marginVertical="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/visualizar" />

            <TextView
                android:id="@+id/tvResultado"
                android:layout_marginVertical="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <Button
                android:id="@+id/btCerrar"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cerrar" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"

        app:menu="@menu/drawer_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>